--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,7 @@
-<h1>Bem vindo(a)</h1>
-<h3>Insira uma API Key válida para continuar</h3>
-<input [(ngModel)]="apiKey">
-<button (click)="validarApiKey()">Validar</button>
+<div class="container">
+    <h1>Bem vindo(a)</h1>
+    <h3>Insira uma API Key válida para continuar</h3>
+    <input [(ngModel)]="apiKey">
+    <button (click)="validarApiKey()">Validar</button>
+  </div>
+  
